- Fixed bug #48911 (embed sapi misses SAPI_API)