sapi/embed/php_embed.h
@@ -58,9 +58,9 @@
 }
 
 BEGIN_EXTERN_C() 
-int php_embed_init(int argc, char **argv PTSRMLS_DC);
-void php_embed_shutdown(TSRMLS_D);
-extern sapi_module_struct php_embed_module;
+SAPI_API int php_embed_init(int argc, char **argv PTSRMLS_DC);
+SAPI_API void php_embed_shutdown(TSRMLS_D);
+extern SAPI_API sapi_module_struct php_embed_module;
 END_EXTERN_C()
 
 
